--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   </head>
   <body>
     <div class="card">
+      <p class="aiyus">created by aiyusTech</p>
       <div class="search">
         <input type="text" placeholder="enter city name" spellcheck="false" />
         <button><img src="images/search.png" /></button>
       </div>
-      <div class="weather">
+      <div class="error">
+        <p>Enter a valid city name</p>
+      </div>
+      <div class="weathers">
         <img src="images/rain.png" class="weather-icon" />
         <h1 class="temp">22°C</h1>
         <h2 class="city">New York</h2>
